--- a/config/settings.config
+++ b/config/settings.config
@@ -1,1 +1,1 @@
-{"config_name":"settings","path":{"client":"client/","logs":"logs/","configs":"config/"},"web":{"ip":"192.168.1.12","port":8080},"post":{"ip":"192.168.1.12","port":4040},"logger":{"log_level":4,"error_level":1,"log_priority_level":false}}
+{"config_name":"settings","path":{"client":"client/","logs":"logs/","configs":"config/","modules":"modules/"},"web":{"ip":"192.168.1.12","port":8000},"post":{"ip":"192.168.1.12","port":4040},"logger":{"log_level":4,"error_level":1,"log_priority_level":false}}
