Updated constructorNames from createX() to X()

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "serve-static": "*",
 	"express": "*",
 	"body-parser": "*",
-	"pushbullet": "*"
+	"pushbullet": "*",
+	"forecast.io": "*"
   }
 }
