--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
   "author": "Jacob Poston",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "*",
     "connect": "*",
+    "express": "*",
+    "forecast.io": "*",
+    "natural": "*",
+    "pushbullet": "*",
     "serve-static": "*",
-	"express": "*",
-	"body-parser": "*",
-	"pushbullet": "*",
-	"forecast.io": "*",
-	"natural": "*"
+    "socket.io": "^1.3.6"
   },
   "bugs": {
     "url": "https://github.com/u1tralord/Beaglebone-Home-Automation/issues"
