--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "id3js": "^1.1.3",
     "natural": "*",
     "pushbullet": "*",
+    "request": "^2.60.0",
     "serve-static": "*",
     "socket.io": "^1.3.6"
   },
